services/auth-service/k8s/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: app-auth-user
spec:
  replicas: 5
  selector:
    matchLabels:
      app: app-auth-user
  template:
    metadata:
      labels:
        app:  app-auth-user
    spec:
      containers:
        - name: app-auth-user
          image: dmitriysyworov/auth-user-service:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
