services/auth-service/k8s/statefulSet_postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-user
spec:
  serviceName:  postgres-user-headless
  replicas: 1
  selector:
    matchLabels:
      app:  postgres-user
  template:
    metadata:
      labels:
        app:  postgres-user
    spec:
      containers:
        - name: postgres-user-service
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data-volume
              mountPath: /var/lib/postgresql/18/data
  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
