services/auth-service/k8s/service_auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-auth-user
spec:
  selector:
    app: app-auth-user
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 32001
  type : NodePort
