services/auth-service/k8s/service_postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-user-headless
spec:
  clusterIP: None
  selector:
    app: postgres-user
  ports:
    - port: 5432
      targetPort: 5432
