services/auth-service/k8s/service_redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-auth-headless
spec:
  clusterIP: None
  selector:
    app: redis-auth
  ports:
    - port: 6379
      targetPort: 6379
